--- a/templates/evening.html
+++ b/templates/evening.html
@@ -7,7 +7,7 @@
 <!-- FontAwesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <!-- Custom CSS (Shared) -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/evening.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/morning.css') }}">
 
 <div class="glass-container fade-in-up mb-5">
 
@@ -140,7 +140,7 @@
                         {% endif %}
                     </tbody>
                     
-                    <!-- FOOTER (UPDATED DARK & BOLD DESIGN) -->
+                    <!-- FOOTER (UPDATED CLEAN & LIGHT DESIGN) -->
                     <tfoot class="table-footer">
                         <tr>
                             <td colspan="3" class="summary-label">Summary</td>
