--- a/templates/emp_ledger.html
+++ b/templates/emp_ledger.html
@@ -3,7 +3,7 @@
 {% block title %}{{ employee.name }}'s Ledger{% endblock %}
 
 {% block page_content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee_finance.css') }}">
 <!-- SweetAlert2 CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 
@@ -236,3 +236,4 @@
     }
 </script>
 {% endblock %}
+
